--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -1,4 +1,4 @@
-$background: #EFEFEF;
-$primary: #FBFBFB;
-$secondary: #F4F4F4;
+$background: #DFDFDF;
+$primary: #FFFFFF;
+$secondary: #F5F5F5;
 $main: #000000;
