--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -1,5 +1,11 @@
 @font-face {
-  font-family: 'Futura PT';
-  src: url('../fonts/futuralt_bold.ttf') format('ttf');
+  font-family: 'Futura';
+  src: url('@/assets/fonts/FuturaCyrillicBold.ttf') format('ttf');
   font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Futura';
+  src: url('@/assets/fonts/FuturaCyrillicMedium.ttf') format('ttf');
+  font-weight: 500;
 }
